# opennlp-gpu

./: .editorconfig  .env  .gitignore  .jitpack.yml  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  COPYRIGHT_HEADER.txt  INSTALLATION.md  PROJECT_COMPLETION_PHASE2_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  README.md  SETUP_GUIDE.md  build.gradle  build.gradle.bak  build.sh  checkstyle.xml  classpath.txt  codebase.json  cp.txt  debug_lspci.java  docker_setup.sh  fix-all-issues.sh  fix-syntax-errors.sh  gpu_demo.sh  gradle.properties  gradlew  lombok.config  pom.xml  pom_backup.xml  pom_backup_original.xml  pom_new.xml  presentation.pptx  settings.gradle  setup.sh  setup_windows.ps1  test_install.sh  verify.sh  verify_java_integration.sh
.copilot/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot-schema.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  github-workflow-schema.json
.lombok/: lombok.config
docker/: README.md  docker-compose.yml  docker_setup.sh  test-alpine.Dockerfile  test-amazonlinux2.Dockerfile  test-centos8.Dockerfile  test-debian11.Dockerfile  test-fedora38.Dockerfile  test-ubuntu20.04.Dockerfile  test-ubuntu22.04.Dockerfile  test-windows-nano.Dockerfile  test-windows.Dockerfile
docs/: ACKNOWLEDGMENTS.md  ARCHITECTURE_OVERVIEW.md  ATTRIBUTION_COMPLIANCE_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  FAQ.md  FILE_REORGANIZATION_SUMMARY.md  JAVA_VALIDATION_REPORT.md  LICENSE_SUMMARY.md  NOTICE  OPENNLP_2_5_5_UPDATE_COMPLETE.md  ORGANIZATION_SUMMARY.md  PHASE2_COMPLETE_TODO_CHECKLIST.md  PROJECT_COMPLETION_PHASE2_SUMMARY.md  PROJECT_STATUS.md  README.md  README_EXAMPLE_ENHANCEMENT_SUMMARY.md  README_IMPROVEMENT_SUMMARY.md  ROADMAP.md  TROUBLESHOOTING.md  accuracy_corrections_summary.md  apache_contribution_guide.md  apache_contribution_summary.md  apache_fork_instructions.md  apache_proposal_email.md  apache_proposal_email_final.md  copilot_agent_auto_continue_setup.md  docker_examples_testing_summary.md  docker_testing_summary.md  getting_started.md  gpu_development_execution_summary.md  gpu_prerequisites_guide.md  gradle-commands.md  gradle-vs-maven.md  high_level_benefits_reply.md  java_environment_guide.md  java_integration_guide.md  java_integration_implementation_summary.md  (+19 more)
docs/apache/: apache_proposal_email.md  code_quality_report.md  integration_timeline.md  performance_benchmark_results.md  technical_architecture.md
docs/api/: quick_reference.md
docs/development/: CONTRIBUTING.md  gradle-commands.md  lombok-and-h2.md  lombok-slf4j-guide.md
docs/guides/: migration_guide_reality_check.md  user_guide.md
docs/overview/: project_plan.md  project_progress.md
docs/performance/: performance_benchmarks.md
docs/project/: COMPLETION_SUMMARY.md  DEPENDENCY_VERIFICATION_REPORT.md  project_plan_main.md
docs/setup/: ONE_CLICK_SETUP_COMPLETE.md  README_UPDATE_SUMMARY.md  getting_started.md  gpu_prerequisites_guide.md
docs/testing/: test_plan.md  test_plan_main.md  test_plan_progress.md
docs/verification/: accuracy_corrections_summary.md  public_release_checklist.md  readme_link_verification_final.md  readme_script_verification.md
examples/: README.md
examples/classification/: GpuDocumentClassification.java  README.md
examples/language_detection/: GpuLanguageDetection.java  README.md
examples/ner/: GpuNamedEntityRecognition.java  README.md
examples/question_answering/: GpuQuestionAnswering.java  README.md
examples/sentiment_analysis/: GpuSentimentAnalysis.java  README.md
logs/: README.md
scripts/: README.md  add_dependencies.sh  add_lombok.sh  agent_auto_continue.sh  analyze_public_release.sh  apache_contribution_assistant.sh  aws_setup.sh  check_gpu_prerequisites.sh  clean_large_files.sh  cleanup_backups.sh  commit_bypass.sh  delete_gradle.sh  deploy.sh  fix-compilation.sh  fix_compilation_errors.sh  fix_copilot_commit_messages.sh  fix_lombok.sh  fix_lombok_imports.sh  fix_lombok_logging.sh  fix_plugin_conflict.sh  fix_vs_code_java.sh  fix_windows_compilation.bat  generate_proposal.sh  gpu_demo.sh  install_vscode_extensions.sh  make_codemap.sh  make_executable.sh  nuclear_cleanup.sh  organize_docs.sh  project_status_summary.sh  quick_java_check.sh  run_all_demos.sh  setup.sh  setup_aws_inferentia.sh  setup_google_tpu.sh  setup_gpu_platform.sh  setup_java_env.sh  setup_rocm.sh  setup_universal_environment.sh  setup_vscode.sh  (+15 more)
scripts/apache/: analyze_public_release.sh  apache_contribution_assistant.sh  generate_proposal.sh  project_status_summary.sh
scripts/debug/: README.md
scripts/deployment/: README.md
scripts/development/: add_dependencies.sh  check_ide_setup.sh  make_codemap.sh  make_executable.sh  migrate_to_maven.sh  reload_vscode.sh  source_java_env.sh  update_copilot.sh  vscode_java_guard_setup.sh
scripts/fixes/: fix_class_logging.sh  fix_cuda_util.sh  fix_dependencies.sh  fix_duplicates_findbugs.sh  fix_git_refs.sh  fix_java_environment.sh  fix_maxent_model.sh  fix_vscode_java.sh
scripts/git-tools/: cleanup_backups.sh  cleanup_large_files.sh
scripts/gpu/: check_gpu_prerequisites.sh  cross_platform_lib.sh
scripts/ide/: README.md  fix_cmake.sh  fix_cmake_configure.sh  fix_java_language_server.sh  java_env.sh  setup_java8.sh
scripts/legacy/: README.md
scripts/setup/: install_vscode_extensions.sh  setup-java-environment.sh  setup_aws_gpu_environment.sh  setup_vscode_java.sh  setup_windows_environment.ps1
scripts/testing/: README.md  run_all_demos.sh  run_comprehensive_tests.sh  run_docker_tests.sh  (+3 more)
src/main/cpp/: CMakeLists.txt  Makefile  gpu_config.h  gpu_config.h.in
src/main/cpp/cpu/: CpuOperations.cpp
src/main/cpp/cuda/: CudaKernelLaunchers.cu  CudaOperations.cpp  kernels.cu
src/main/cpp/jni/: GpuOperationsJNI.cpp
src/main/cpp/rocm/: CMakeLists.txt  HipKernelLaunchers.cpp  HipOperations.cpp  RocmKernelLaunchers.hip  RocmOperations.cpp  kernels.cpp  kernels.hip
test-output/: README.md  compilation_fix_report.md  compilation_fix_summary.md
tests/: test_install.sh
(+147 files in other folders)
